fix: 修复后端编译错误 - 移除重复questionService字段，兼容Java 8